- fixed a bug where signature table update fails when signature panel was collapsed - improved "toggle height" click observer for information panels - updated "Sortable" JS library `1.3.0` -> '1.6.0'

--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -1284,6 +1284,8 @@ code .fa {
 
 // drag&drop (Sortable) ===========================================================================
 .pf-sortable-ghost{
+  will-change: opacity;
+  transition: opacity 0.2s ease-out;
   opacity: 0.7 !important;
 
   .pf-module-handler-drag{
